# python-server-template

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  cookiecutter.json  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_01_01_b36988b23eb0_init.py  2023_08_04_e9e2a0267b77_init.py  2023_08_06_65cd02535fd9_init.py
app/: __main__.py  deps.py  formatter.py  injector.py  logging.py  services.py  settings.py
app/adapters/: password.py  token.py
app/api/: app.py  dependencies.py  exceptions.py
app/api/auth/: resources.py  schemas.py
app/api/dependencies/: auth.py  di.py
app/api/middlewares/: logger.py  request_id.py
app/api/probes/: resources.py
app/api/users/: resources.py  schemas.py
app/cli/: app.py  server.py  users.py
app/core/: auth.py  password.py  token.py  users.py
app/db/: database.py  models.py  users.py
docker/app/: Dockerfile
hooks/: post_gen_project.py
tests/: conftest.py  database.py
tests/api/: conftest.py  test_users.py
{{cookiecutter.project_slug}}/: CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/alembic/versions/: 2023_01_01_b36988b23eb0_init.py
{{cookiecutter.project_slug}}/docker/pgcli/: Dockerfile
{{cookiecutter.project_slug}}/docker/{{cookiecutter.app_name}}/: Dockerfile
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/: injector.py  settings.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/api/: app.py  dependencies.py  exceptions.py  gunicorn.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/api/auth/: resources.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/api/users/: resources.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/core/: users.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/db/: __init__.py  _database.py  database.py  users.py
